Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8579

lsasrv build error with MS toolchain

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.3.17
    • Security
    • MSVC 2013
      Windows 7 64 bit

    Description

      Building lsasrv with MS VC was broken in Svn commit revision 64384 due to an uninitialized variable:

      [3242/8628] Building C object dll\win32\lsasrv\CMakeFiles\lsasrv.dir\session.c.obj
      FAILED: C:\PROGRA~2\MICROS~1.0\VC\bin\cl.exe /nologo /X /GR- /EHs-c- /GS- /Zl /W3 /arch:IA32 /FS /wd4290 /wd4244 /we4013 /we4020 /we4022 /we4047 /we4098 /we41
      13 /we4129 /we4163 /we4229 /we4700 /we4603 /w14115 /Zi /Ob0 /Od -Idll\win32\lsasrv -I..\..\dll\win32\lsasrv -I..\..\include -I..\..\include\psdk -I..\..\include
      \dxsdk -Iinclude -Iinclude\psdk -Iinclude\dxsdk -Iinclude\reactos -I..\..\include\crt -I..\..\include\ddk -I..\..\include\ndk -I..\..\include\reactos -I..\..\in
      clude\reactos\libs -I..\..\include\reactos\idl -I..\..\include\reactos\subsys\lsass /FIR:/trunk-svn-xxx/reactos/output-VS12-i386/reactos/dll/win32/lsasrv/ls
      asrv.pch /YuR:/trunk-svn-xxx/reactos/output-VS12-i386/reactos/dll/win32/lsasrv/lsasrv.pch /showIncludes -DDBG=1 -DUNICODE -DUSE_COMPILER_EXCEPTIONS -DWIN32 -DWI
      NVER=0x502 -D_DLL -D_M_IX86 -D_SEH_ENABLE_TRACE -D_SETUPAPI_VER=0x502 -D_UNICODE -D_USE_32BIT_TIME_T -D_WIN32_IE=0x600 -D_WIN32_WINDOWS=0x502 -D_WIN32_WINNT=0x5
      02 -D_WINDOWS -D_WINKD_=1 -D_X86_ -D_REACTOS_ -D_STDC=1 -DUSE_CRTIMP -Di386_ -Di386 -Dinline=__inline -Dlsasrv_EXPORTS /Fodll\win32\lsasrv\CMakeFiles\
      lsasrv.dir\session.c.obj /Fddll\win32\lsasrv\CMakeFiles\lsasrv.dir/ -c ..\..\dll\win32\lsasrv\session.c
      r:\trunk-svn-xxx\reactos\dll\win32\lsasrv\session.c(317) : error C4700: uninitialized local variable 'MemSize' used
      ninja: build stopped: subcommand failed.

      Attachments

        Activity

          People

            ekohl ekohl
            Thomas Kriese Thomas Kriese
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: