[LSASRV] Remove obsolete TRACE message. CORE-8579 #resolve

svn path=/trunk/; revision=64407