reactos/dll/win32/lsasrv/session.c
@@ -314,8 +314,6 @@ LsapGetLogonSessionData(IN OUT PLSA_API_MSG RequestMsg)
         goto done;
     }
 
-    //TRACE("MemSize: %lu\n", MemSize);
-
     MemSize = Length;
     Status = NtAllocateVirtualMemory(ProcessHandle,
                                      &ClientBaseAddress,
